tests/machine/x/cobol/map_assign.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/map_assign.cob:11: error: 'SCORES-BOB' is not defined

