tests/machine/x/cobol/map_assign.cob
*> Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. MAP-ASSIGN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 SCORES.
           05 ALICE PIC 9 VALUE 1.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       COMPUTE SCORES-BOB = 2
       COMPUTE TMP = SCORES-BOB
       DISPLAY TMP
       STOP RUN.
